--- a/config/boards/arm/cyber60_rev_d/cyber60_rev_d.dts
+++ b/config/boards/arm/cyber60_rev_d/cyber60_rev_d.dts
@@ -86,7 +86,7 @@
     buzzer: pwm_buzzer {
         compatible = "pwm-buzzer";
         label = "PWM BUZZER";
-        pwms = <&pwm0 23>;
+        pwms = <&pwm0 23 10000 PWM_POLARITY_NORMAL>;
         status = "okay";
     };
 
