--- a/build.yaml
+++ b/build.yaml
@@ -17,4 +17,4 @@ include:
 #  - board: cyber60_rev_b
 #  - board: cyber60_rev_c
   - board: cyber60_rev_d
-  - board: kbdfans_tofu60
+  - board: kbdfans_tofu60_v2
