--- a/config/boards/arm/kbdfans_tofu60_v2/kbdfans_tofu60_v2_defconfig
+++ b/config/boards/arm/kbdfans_tofu60_v2/kbdfans_tofu60_v2_defconfig
@@ -22,3 +22,25 @@ CONFIG_USE_DT_CODE_PARTITION=y
 CONFIG_BUILD_OUTPUT_UF2=y
 
 CONFIG_USB_SELF_POWERED=n
+
+# ----------------------------------------
+
+# choice ZMK_HID_REPORT_TYPE
+CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+# CONFIG_ZMK_HID_REPORT_TYPE_HKRO=y
+
+# disable LED
+CONFIG_ZMK_RGB_UNDERGLOW=n
+CONFIG_WS2812_STRIP=n
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
+CONFIG_PWM=n
+CONFIG_LED_PWM=n
+CONFIG_ZMK_BACKLIGHT=n
+
+# enable deep sleep
+CONFIG_ZMK_SLEEP=y
+
+CONFIG_USB_DEVICE_VID=0x05AC
+CONFIG_USB_DEVICE_PID=0x024F
+CONFIG_BT_DIS_PNP_VID=0x05AC
+CONFIG_BT_DIS_PNP_PID=0x024F
