--- a/config/bt60.conf
+++ b/config/bt60.conf
@@ -38,4 +38,5 @@ CONFIG_LED_PWM=y
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_BUILD_OUTPUT_UF2=y
 
+# Fix windows batterz reporting
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
