--- a/config/bt60.conf
+++ b/config/bt60.conf
@@ -1,5 +1,3 @@
-# SPDX-License-Identifier: MIT
-
 CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
 CONFIG_BOARD_BT60=y
@@ -9,7 +7,6 @@ CONFIG_ARM_MPU=y
 
 # enable GPIO
 CONFIG_GPIO=y
-
 CONFIG_PINCTRL=y
 
 # encoder
@@ -35,8 +32,12 @@ CONFIG_WS2812_STRIP=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
 CONFIG_PWM=y
 CONFIG_LED_PWM=y
-CONFIG_ZMK_BACKLIGHT=y
 CONFIG_BUILD_OUTPUT_UF2=y
 
 # Fix windows batterz reporting
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+
+# Backlight management
+CONFIG_ZMK_BACKLIGHT=y
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
+CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=y
