--- a/config/kbdfans_tofu60_v2.conf
+++ b/config/kbdfans_tofu60_v2.conf
@@ -1,4 +1,6 @@
-CONFIG_USB_SELF_POWERED=n
-CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+#CONFIG_USB_SELF_POWERED=n
+#CONFIG_ZMK_HID_REPORT_TYPE_NKRO=y
+CONFIG_ZMK_USB=y
 CONFIG_USB_DEVICE_VID=0x05AC
 CONFIG_USB_DEVICE_PID=0x024F
+CONFIG_USB_DEVICE_MANUFACTURER="KBDFANS"
