feat(bt60): better configuration

--- a/config/bt60.conf
+++ b/config/bt60.conf
@@ -2,6 +2,14 @@ CONFIG_SOC_SERIES_NRF52X=y
 CONFIG_SOC_NRF52840_QIAA=y
 CONFIG_BOARD_BT60=y
 
+# Enable USB
+CONFIG_USB=y
+CONFIG_ZMK_USB=y
+
+# Enable Bluetooth
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
+
 # Enable MPU
 CONFIG_ARM_MPU=y
 
@@ -34,7 +42,7 @@ CONFIG_PWM=y
 CONFIG_LED_PWM=y
 CONFIG_BUILD_OUTPUT_UF2=y
 
-# Fix windows batterz reporting
+# Fix windows battery reporting
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 # Backlight management
