--- a/config/bt60.conf
+++ b/config/bt60.conf
@@ -50,3 +50,8 @@ CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 CONFIG_ZMK_BACKLIGHT=y
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_IDLE=y
 CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=y
+
+# Polling rate configuration
+CONFIG_USB_HID_POLL_INTERVAL_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
