--- a/config/cyber60_rev_d.conf
+++ b/config/cyber60_rev_d.conf
@@ -45,3 +45,8 @@ CONFIG_BUILD_OUTPUT_UF2=y
 
 # Fix windows battery reporting
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
+
+# Polling rate configuration
+CONFIG_USB_HID_POLL_INTERVAL_MS=1
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
