--- a/config/bt60.conf
+++ b/config/bt60.conf
@@ -53,5 +53,8 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=y
 
 # Polling rate configuration
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
-CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
+
+# Eager Debouncing
+CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
