--- a/config/kbdfans_tofu60_v2.conf
+++ b/config/kbdfans_tofu60_v2.conf
@@ -5,4 +5,7 @@ CONFIG_USB_DEVICE_MANUFACTURER="KBDFANS"
 
 # Polling rate configuration
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
+
+# Eager Debouncing
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
+CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
