--- a/config/bt60.conf
+++ b/config/bt60.conf
@@ -10,6 +10,9 @@ CONFIG_ZMK_BLE=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
+# Sleep settings
+CONFIG_ZMK_SLEEP=y
+
 # Enable MPU
 CONFIG_ARM_MPU=y
 
@@ -30,14 +33,13 @@ CONFIG_FLASH=y
 CONFIG_FLASH_PAGE_LAYOUT=y
 CONFIG_FLASH_MAP=y
 
-CONFIG_SPI=y
+# Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
-CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
-CONFIG_ZMK_RGB_UNDERGLOW_HUE_START=262
+CONFIG_ZMK_BACKLIGHT=n
 
 # Use the STRIP config specific to the LEDs you're using
-CONFIG_WS2812_STRIP=y
+CONFIG_WS2812_STRIP=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
 CONFIG_PWM=y
 CONFIG_LED_PWM=y
