--- a/config/bt60.conf
+++ b/config/bt60.conf
@@ -11,7 +11,7 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
 # Sleep settings
-CONFIG_ZMK_SLEEP=y
+# CONFIG_ZMK_SLEEP=y
 
 # Enable MPU
 CONFIG_ARM_MPU=y
