--- a/config/cyber60_rev_d.conf
+++ b/config/cyber60_rev_d.conf
@@ -11,10 +11,14 @@ CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
 # Sleep settings
-# CONFIG_ZMK_SLEEP=y
+CONFIG_ZMK_SLEEP=n
 
 # Enable MPU
 CONFIG_ARM_MPU=y
+
+# enable pwm
+CONFIG_PWM=y
+CONFIG_PWM_NRFX=y
 
 # enable GPIO
 CONFIG_GPIO=y
@@ -41,7 +45,6 @@ CONFIG_ZMK_BACKLIGHT=n
 # Use the STRIP config specific to the LEDs you're using
 CONFIG_WS2812_STRIP=n
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
-CONFIG_PWM=y
 CONFIG_LED_PWM=y
 CONFIG_BUILD_OUTPUT_UF2=y
 
