--- a/config/cyber60_rev_d.conf
+++ b/config/cyber60_rev_d.conf
@@ -1,52 +1,11 @@
-CONFIG_SOC_SERIES_NRF52X=y
-CONFIG_SOC_NRF52840_QIAA=y
-CONFIG_BOARD_CYBER60_REV_D=y
-
-# Enable USB
-CONFIG_ZMK_USB=y
-
-# Enable Bluetooth
-CONFIG_ZMK_BLE=y
+# Enable Bluetooth passkey
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
-
-# Sleep settings
-CONFIG_ZMK_SLEEP=n
-
-# Enable MPU
-CONFIG_ARM_MPU=y
-
-# enable pwm
-CONFIG_PWM=y
-CONFIG_PWM_NRFX=y
-
-# enable GPIO
-CONFIG_GPIO=y
-CONFIG_PINCTRL=y
-
-# encoder
-CONFIG_EC11=y
-CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
-
-CONFIG_USE_DT_CODE_PARTITION=y
-
-CONFIG_MPU_ALLOW_FLASH_WRITE=y
-CONFIG_NVS=y
-CONFIG_SETTINGS_NVS=y
-CONFIG_FLASH=y
-CONFIG_FLASH_PAGE_LAYOUT=y
-CONFIG_FLASH_MAP=y
 
 # Underglow
 CONFIG_ZMK_RGB_UNDERGLOW=n
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=n
 CONFIG_ZMK_BACKLIGHT=n
-
-# Use the STRIP config specific to the LEDs you're using
-CONFIG_WS2812_STRIP=n
-CONFIG_BT_CTLR_TX_PWR_PLUS_8=n
-CONFIG_LED_PWM=y
-CONFIG_BUILD_OUTPUT_UF2=y
 
 # Fix windows battery reporting
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
