feat: zmk-studio

--- a/config/boards/arm/cyber60_rev_d/cyber60_rev_d_defconfig
+++ b/config/boards/arm/cyber60_rev_d/cyber60_rev_d_defconfig
@@ -45,5 +45,8 @@ CONFIG_ZMK_SLEEP=n
 CONFIG_PINCTRL=y
 
 # Turn on logging, and set ZMK logging to debug output
-CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
-CONFIG_ZMK_USB_LOGGING=y
+# CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+# CONFIG_ZMK_USB_LOGGING=y
+
+CONFIG_ZMK_STUDIO=y
+CONFIG_ZMK_STUDIO_LOCKING=n
