--- a/build.yaml
+++ b/build.yaml
@@ -7,5 +7,12 @@
 ---
 include:
   - board: cyber60_rev_d
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: kbdfans_tofu60_v2
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
   - board: bt60
+    snippet: studio-rpc-usb-uart
+    cmake-args: -DCONFIG_ZMK_STUDIO=y
+
