--- a/config/boards/arm/cyber60_rev_d/cyber60_rev_d.dts
+++ b/config/boards/arm/cyber60_rev_d/cyber60_rev_d.dts
@@ -6,9 +6,11 @@
 
 /dts-v1/;
 #include <nordic/nrf52840_qiaa.dtsi>
-#include <dt-bindings/zmk/matrix_transform.h>
 #include <dt-bindings/led/led.h>
 #include "cyber60_rev_d-pinctrl.dtsi"
+#include "cyber60_rev_d-layouts.dtsi"
+#include "cyber60_rev_d-transforms.dtsi"
+
 / {
 	model = "CYBER60_REV_D";
 	compatible = "cyber60", "Rev_D";
@@ -18,10 +20,10 @@
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
 		zmk,kscan = &kscan0;
-        zmk,matrix_transform = &default_transform;
+        //zmk,matrix_transform = &default_transform;
         zmk,underglow = &led_strip;
 		zmk,battery = &vbatt;
-		zephyr,console = &cdc_acm_uart;
+		//zephyr,console = &cdc_acm_uart;
 	};
 
 	vbatt: vbatt {
@@ -87,24 +89,11 @@
 		control-gpios = <&gpio0 31 GPIO_ACTIVE_HIGH>; // P0.31
 	};
 
-	default_transform: keymap_transform_0 {
-		compatible = "zmk,matrix-transform";
-		columns = <7>;
-		rows = <10>;
-		map = <
-			RC(0,0) RC(1,0) RC(0,1) RC(1,1) RC(0,2) RC(1,2) RC(0,3) RC(1,3) RC(0,4) RC(1,4) RC(0,5) RC(1,5) RC(0,6) RC(1,6) RC(3,6)
-			RC(2,0) RC(3,0) RC(2,1) RC(3,1) RC(2,2) RC(3,2) RC(2,3) RC(3,3) RC(2,4) RC(3,4) RC(2,5) RC(3,5) RC(2,6) RC(5,6)
-			RC(4,0) RC(5,0) RC(4,1) RC(5,1) RC(4,2) RC(5,2) RC(4,3) RC(5,3) RC(4,4) RC(5,4) RC(4,5) RC(5,5) RC(4,6) RC(7,6)
-			RC(6,0) RC(7,0) RC(6,1) RC(7,1) RC(6,2) RC(7,2) RC(6,3) RC(7,3) RC(6,4) RC(7,4) RC(6,5) RC(7,5) RC(8,6) RC(6,6) 
-			RC(8,0) RC(9,0) RC(8,1) RC(9,1) RC(8,3) RC(9,3) RC(8,4) RC(9,4) RC(8,5) RC(9,5) 
-			RC(9,6) // rotary sw
-		>;
-	};
+
 
 	kscan0: kscan {
 		compatible = "zmk,kscan-gpio-matrix";
 		label = "KSCAN";
-
 		diode-direction = "col2row";
 		row-gpios
 			= <&gpio0 28  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
@@ -128,7 +117,11 @@
 			, <&gpio1 2 GPIO_ACTIVE_HIGH>
 			;
 	};
+
+
+
 };
+
 
 &gpio0 {
 	status = "okay";
@@ -142,6 +135,9 @@
 	status = "okay";
 };
 
+zephyr_udc0: &usbd {
+    status = "okay";
+};
 
 &usbd {
     status = "okay";
