feat(cyber60): mouse move

--- a/config/cyber60_rev_d.conf
+++ b/config/cyber60_rev_d.conf
@@ -10,6 +10,9 @@ CONFIG_ZMK_BACKLIGHT=n
 # Fix windows battery reporting
 CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
+# Pointing device
+CONFIG_ZMK_POINTING=y
+
 # Polling rate configuration
 CONFIG_USB_HID_POLL_INTERVAL_MS=1
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
