--- a/config/boards/arm/cyber60_rev_d/cyber60_rev_d.dts
+++ b/config/boards/arm/cyber60_rev_d/cyber60_rev_d.dts
@@ -6,10 +6,10 @@
 
 /dts-v1/;
 #include <nordic/nrf52840_qiaa.dtsi>
+#include <dt-bindings/zmk/matrix_transform.h>
 #include <dt-bindings/led/led.h>
 #include "cyber60_rev_d-pinctrl.dtsi"
 #include "cyber60_rev_d-layouts.dtsi"
-#include "cyber60_rev_d-transforms.dtsi"
 
 / {
 	model = "CYBER60_REV_D";
@@ -20,15 +20,13 @@
 		zephyr,sram = &sram0;
 		zephyr,flash = &flash0;
 		zmk,kscan = &kscan0;
-        //zmk,matrix_transform = &default_transform;
         zmk,underglow = &led_strip;
 		zmk,battery = &vbatt;
-		//zephyr,console = &cdc_acm_uart;
+		zmk,studio-rpc-uart = &cdc_acm_uart;
 	};
 
 	vbatt: vbatt {
 		compatible = "zmk,battery-voltage-divider";
-		label = "VBATT";
 		io-channels = <&adc 1>; // P0.03
 		output-ohms = <2000000>;
 		full-ohms = <(1000000 + 2000000)>;
@@ -42,7 +40,6 @@
 
 	encoder: encoder_1 {
         compatible = "alps,ec11";
-        label = "ENCODER";
         a-gpios = <&gpio1 1 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>; // P1.01
         b-gpios = <&gpio1 3 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>; // P1.03
         //resolution = <2>;
@@ -52,25 +49,23 @@
     buzzer: pwm_buzzer {
         compatible = "pwm-buzzer";
 		pwms = <&pwm0 0 1000 PWM_POLARITY_NORMAL>;
-		label = "PWM BUZZER";
-		status = "okay";
+		//set status = "okay" to enable the buzzer
+		status = "disabled";
+		//status = "okay";
     };
 
 	leds {
 			compatible = "gpio-leds";
 			led_0: led_green { // P0.05
 				gpios = <&gpio0 5 GPIO_ACTIVE_LOW>;
-				label = "Green LED";
 				status = "okay";
 			};
 			led_1: led_red { // P0.07
 				gpios = <&gpio0 7 GPIO_ACTIVE_LOW>;
-				label = "Red LED";
 				status = "okay";
 			};
 			led_2: led_blue { // P1.09
 				gpios = <&gpio1 9 GPIO_ACTIVE_LOW>;
-				label = "Blue LED";
 				status = "okay";
 			};
 		};
@@ -85,15 +80,26 @@
 
 	ext-power {
 		compatible = "zmk,ext-power-generic";
-		label = "EXT_POWER";
 		control-gpios = <&gpio0 31 GPIO_ACTIVE_HIGH>; // P0.31
 	};
 
-
+	default_transform: keymap_transform_0 {
+		compatible = "zmk,matrix-transform";
+		columns = <7>;
+		rows = <10>;
+		map = <
+			RC(0,0) RC(1,0) RC(0,1) RC(1,1) RC(0,2) RC(1,2) RC(0,3) RC(1,3) RC(0,4) RC(1,4) RC(0,5) RC(1,5) RC(0,6) RC(1,6) RC(3,6)
+			RC(2,0) RC(3,0) RC(2,1) RC(3,1) RC(2,2) RC(3,2) RC(2,3) RC(3,3) RC(2,4) RC(3,4) RC(2,5) RC(3,5) RC(2,6) RC(5,6)
+			RC(4,0) RC(5,0) RC(4,1) RC(5,1) RC(4,2) RC(5,2) RC(4,3) RC(5,3) RC(4,4) RC(5,4) RC(4,5) RC(5,5) RC(4,6) RC(7,6)
+			RC(6,0) RC(7,0) RC(6,1) RC(7,1) RC(6,2) RC(7,2) RC(6,3) RC(7,3) RC(6,4) RC(7,4) RC(6,5) RC(7,5) RC(8,6) RC(6,6) 
+			RC(8,0) RC(9,0) RC(8,1) RC(9,1) RC(8,3) RC(9,3) RC(8,4) RC(9,4) RC(8,5) RC(9,5) 
+			RC(9,6) // rotary sw
+		>;
+	};
 
 	kscan0: kscan {
 		compatible = "zmk,kscan-gpio-matrix";
-		label = "KSCAN";
+		wakeup-source;
 		diode-direction = "col2row";
 		row-gpios
 			= <&gpio0 28  (GPIO_ACTIVE_HIGH | GPIO_PULL_DOWN)>
@@ -122,7 +128,6 @@
 
 };
 
-
 &gpio0 {
 	status = "okay";
 };
@@ -146,6 +151,7 @@ zephyr_udc0: &usbd {
         label = "CDC_ACM_0";
     };
 };
+
 &pwm0 {
 	//ch0-pin = <23>; //old imp.
     status = "okay";    
