--- a/config/cyber60_rev_d.conf
+++ b/config/cyber60_rev_d.conf
@@ -1,4 +1,10 @@
+# Enabble USB
+CONFIG_USB=y
+CONFIG_ZMK_USB=y
+
 # Enable Bluetooth passkey
+CONFIG_BT=y
+CONFIG_ZMK_BLE=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_FEATURES=y
 CONFIG_ZMK_BLE_PASSKEY_ENTRY=y
 
@@ -12,11 +18,3 @@ CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 # Pointing device
 CONFIG_ZMK_POINTING=y
-
-# Polling rate configuration
-# CONFIG_USB_HID_POLL_INTERVAL_MS=1
-# CONFIG_BT_PERIPHERAL_PREF_MAX_INT=6
-
-# Eager Debouncing
-# CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=0
-# CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=5
