feat(cyber60): metal enclosing configuration

--- a/config/cyber60_rev_e.conf
+++ b/config/cyber60_rev_e.conf
@@ -16,3 +16,6 @@ CONFIG_BT_GATT_ENFORCE_SUBSCRIPTION=n
 
 # Pointing device
 CONFIG_ZMK_POINTING=y
+
+# Set TX power level
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y  # Sometimes recommended if used in a metal enclosure
